# city-weather-cli

./: Cargo.toml  README.md
src/: main.rs
src/my_commands/: city_command.rs  mod.rs  weather_struct.rs
src/process/: mod.rs  the_process.rs
