[package]
name = "city_weather_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.7", features = ["cargo"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.0", features = ["json"] }
serde = "1.0.119"
serde_json = "1.0.61"
serde_derive = "1.0.119"
flatten-json-object = "0.6.1"
